# VRStats

./: README.md  pyproject.toml
data/: all.xlsx
output/: Analysis_20251208_030430.xlsx  Analysis_20251215_154153.xlsx  Analysis_20251215_154500.xlsx  report.xlsx
src/: main.py  setting.py
src/parts/: baseline.py  descriptives.py  normality.py  two_group_tests.py
src/utils/: func.py
