[project]
name = "VRStats"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "fastexcel>=0.18.0",
    "polars>=1.35.2",
    "scienceplots>=2.2.0",
    "scipy>=1.16.3",
    "scipy-stubs==1.16.3.0",
    "statsmodels>=0.14.5",
    "xlsxwriter>=3.2.9",
]
